Sun Jun  2 18:46:28 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	src:
	* decode.c: Drop include main.h.
	* filestack.c (StoreFileName): Rename to FS_StoreFileName.
	(CachedFile_Lookup): Follow StoreFileName rename.
	(FS_PushFilePObject): Likewise.
	* filestack.h (FS_StoreFileName): Add.
	* directive_file.c (c_incbin): Add call FS_StoreFileName.
	* eval.c (Eval_Unop): Likewise for eOp_FLoad, eOp_FExec, eOp_FSize
	and eOp_FAttr.
	* decode.c: Update comment.

Sun Jun  2 18:09:07 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	src:
	* reloc.c (ARM_Reloc_Types, oARMRelocTypes, Reloc_GetRelocValue,
	c_reloc): Add.
	(Reloc_CreateInternal): Support relocation replacement.  Add more
	asserts.
	* reloc.h (Reloc_State_t): Add offsetForExplicitReloc field.
	(Reloc_EnableExplicitReloc, Reloc_DisableExplicitReloc): Add.
	(c_reloc): Add.
	* Makefile.am (asasm_CFLAGS): Add -Wno-switch.
	* symbol.c (Symbol_MarkToOutput): Add.
	(Symbol_CreateSymbolOut): Remove test on implicit import.
	* symbol.h (Symbol): Update comments.
	(Symbol_MarkToOutput): Add.
	* decode.c (oDecodeTable): Add RELOC entry.
	(Decode): Add Reloc_DisableExplicitReloc and Reloc_EnableExplicitReloc
	calls.
	* directive_data.c (DefineInt): Add Reloc_EnableExplicitReloc call.
	* area.c (Area_PrepareForPhase): Add test on CODE area for NOINIT
	suggestion.

	unittests/reloc:
	* src/directive_reloc.s: Add.
	* src/directive_reloc_all.s: Add.
	* ref/directive_reloc_*: Add.

Sat Jun  1 13:41:22 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	src:
	* reloc.c (Reloc_Create): Replaced by Reloc_CreateAOF, Reloc_CreateELF.
	(Reloc_InitializeState, Reloc_FinalizeState): Add.
	(Reloc_CreateInternal): Add.
	(Reloc_GetRawRelocData): Add.  Have relocations sorted by offset.
	(Reloc_PrepareRelocOutPart1, Reloc_PrepareRelocOutPart2,
	Reloc_BuildForAOF, Reloc_BuildForELF): Remove.
	* reloc.h (Reloc_State_t): Add.
	(RelocOut): Remove.
	* area.c (Area_Create): Call Reloc_InitializeState.