@@ -198,26 +198,44 @@ label23
 
 	|
 		DCI	&e12fff13	; BX	r3
+		RELOC	R_ARM_V4BX
 		DCI	&e12fff24	; BXJ	r4
 		DCI	&e12fff35	; BLX	r5
 
 		DCI	&012fff13	; BXEQ	R3
+		RELOC	R_ARM_V4BX
 		DCI	&112fff13	; BXNE	R3
+		RELOC	R_ARM_V4BX
 		DCI	&212fff13	; BXCS	R3
+		RELOC	R_ARM_V4BX
 		DCI	&212fff13	; BXHS	R3
+		RELOC	R_ARM_V4BX
 		DCI	&312fff13	; BXCC	R3
+		RELOC	R_ARM_V4BX
 		DCI	&312fff13	; BXLO	R3
+		RELOC	R_ARM_V4BX
 		DCI	&412fff13	; BXMI	R3
+		RELOC	R_ARM_V4BX
 		DCI	&512fff13	; BXPL	R3
+		RELOC	R_ARM_V4BX
 		DCI	&612fff13	; BXVS	R3
+		RELOC	R_ARM_V4BX
 		DCI	&712fff13	; BXVC	R3
+		RELOC	R_ARM_V4BX
 		DCI	&812fff13	; BXHI	R3
+		RELOC	R_ARM_V4BX
 		DCI	&912fff13	; BXLS	R3
+		RELOC	R_ARM_V4BX
 		DCI	&a12fff13	; BXGE	R3
+		RELOC	R_ARM_V4BX
 		DCI	&b12fff13	; BXLT	R3
+		RELOC	R_ARM_V4BX
 		DCI	&c12fff13	; BXGT	R3
+		RELOC	R_ARM_V4BX
 		DCI	&d12fff13	; BXLE	R3
+		RELOC	R_ARM_V4BX
 		DCI	&e12fff13	; BXAL	R3
+		RELOC	R_ARM_V4BX
 
 		DCI	&012fff24	; BXJEQ	R4
 		DCI	&112fff24	; BXJNE	R4
